My site ready for deployment.

--- a/index.html
+++ b/index.html
@@ -42,52 +42,43 @@
     </div>
 
     <nav id="navigation" class="navbar navbar-expand-lg ">
-            <a class="navbar-brand" href="#">Aron Hopson</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
+        <a class="navbar-brand" href="#">T. Aron Hopson</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#stats">Stats <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#about">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#skills">Skills</a>
+                    <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link" href="#portfolio">Portfolio</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+            </ul>
+        </div>
+    </nav>
 
     <div id="about" class="section">
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <img class="aboutImg" src="img/GATE 2020.jpg">
+                    <img class="aboutImg" src="img/Aro.jpg">
                 </div>
                 <div class="col-md-7">
-                    <h1>My Name is Aron Hopson</h1>
-                    <p>I have a keen interest towards Web Development and I have been working on it, So from your Job
-                        description I notice that my skills are align with your job requirement, It would be good
-                        Platform for me to showcase my skills and also expect my skills to exponentially grow and be an
-                        assets to your team.
+                    <h1>My Name is T.Aron Hopson</h1>
+                    <p>I have a keen interest towards Web Development and I have been working on it to improve my
+                        skills, So i am seeking for an opportunity to get a platform where i can showcase my skills
+                        where my skills can be utilized for improvement and success of the organization,
+                        also expect my skills to exponentially grow and be assets to your team.
                         I’m interested in the opportunity to work in a team environment. I always wanted to work with
                         hard-working professional & experienced people. I love to contribute to the team effort and
                         produce the best result
                     </p>
-                    <p>I always wanted to work in a company where a Company focused to provide the solutions to the
-                        essential needs of day todays life, Like Education, Communication & Transportation. As I could
-                        see your company are in-line with 1 of those 3 essential qualities.
-                        Your company are known for its contribution to society and its commitment to improve the
-                        community making the life of people easier and better by giving them access to move around
-                        without much struggle. So I would be a pleasure to share my skills with your company, working as
-                        a team helping people and overcoming challenges, providing solutions .
-                    </p>
+
 
                 </div>
             </div>
@@ -152,7 +143,7 @@
     </div>
 
 
-    <div id="stats" class="Statesection">
+    <!-- <div id="stats" class="Statesection">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -218,10 +209,10 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
 
-    <div id="contact" class="contactSection">
+    <!-- <div id="contact" class="contactSection">
         <div class="container">
             <div class="col-md-12 text-center">
                 <p class="subHeading">Like What you see</p>
@@ -229,7 +220,7 @@
                 <a href="/mailAt : aronhopson95@gmail.com" class="contactButton">Get in touch</a></a>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <div id="portfolio" class="section">
@@ -298,9 +289,9 @@
     </div>
 
     <div class="copyrightSec">
-<div class="col-md-12 text-center">
-    <p>&copy; copyright Aron Hopson 2019</p>
-</div>
+        <div class="col-md-12 text-center">
+            <p>&copy; copyright Aron Hopson 2019</p>
+        </div>
     </div>
 
 
