My site ready for deployment.

--- a/New folder/index.html
+++ b/New folder/index.html
@@ -104,24 +104,32 @@
                         <p>Used in my project</p>
                     </div>
                     <div class="skill">
-                        <span class="chart" data-percent="80">
-                            <span class="percent">80</span>
+                        <span class="chart" data-percent="35">
+                            <span class="percent">35</span>
+                            <canvas height="152" width="152"></canvas>
+                        </span>
+                        <h4>Node.js</h4>
+                        <p>Used in my project</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="65">
+                            <span class="percent">65</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>HTML</h4>
                         <p>Used in my project</p>
                     </div>
                     <div class="skill">
-                        <span class="chart" data-percent="75">
-                            <span class="percent">75</span>
+                        <span class="chart" data-percent="60">
+                            <span class="percent">60</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>CSS</h4>
                         <p>Used in my project</p>
                     </div>
                     <div class="skill">
-                        <span class="chart" data-percent="82">
-                            <span class="percent">82</span>
+                        <span class="chart" data-percent="60">
+                            <span class="percent">60</span>
                             <canvas height="152" width="152"></canvas>
                         </span>
                         <h4>Bootstrap</h4>
